2022/oscal-tirana/k8s/non-compliant-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: non-compliant
spec:
  selector:
    matchLabels:
      app: non-compliant
  template:
    metadata:
      labels:
        app: non-compliant
    spec:
      containers:
      - name: non-compliant
        image: nginx
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
