2022/oscal-tirana/k8s/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLabels
metadata:
  name: deployments-must-have-gk
spec:
  match:
    kinds:
      - apiGroups: ["*"]
        kinds: ["Deployment"]
  parameters:
    labels: ["gatekeeper"]
